--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "next",
-    "export": "next build && next export"
+    "export": "next build && next export -o /public"
   },
   "repository": {
     "type": "git",
