--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "next",
-    "export": "next build && next export -o /public"
+    "export": "next build && next export"
   },
   "repository": {
     "type": "git",
@@ -19,9 +19,9 @@
   },
   "homepage": "https://github.com/samjbmason/samjbmason.github.io#readme",
   "dependencies": {
-    "next": "^7.0.2",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
+    "next": "^9.1.4",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "rebass": "^3.0.0-9",
     "styled-components": "^4.0.0-beta.9"
   },
