--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/samjbmason/samjbmason.github.io.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Sam Mason de Caires",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/samjbmason/samjbmason.github.io/issues"
